objects/CleanQuote__c.object
<CustomObject>
    <fields>
        <fullName>Study_Date__c</fullName>
        <label>Study Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Size_kW_DC__c</fullName>
        <label>System Size (kW DC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Financing_Fee_Dollars__c</fullName>
        <label>Total Financing Fee ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Financing_Fee__c</fullName>
        <label>Total Financing Fee (%)</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_PACE_financing_amount_Est__c</fullName>
        <label>Total PACE financing amount (Est.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_to_Lead_Who_Am_I__c</fullName>
        <label>Web-to-Lead Who Am I</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>CleanFund</fullName>
                </value>
                <value>
                    <fullName>Energy Services Consultant</fullName>
                </value>
                <value>
                    <fullName>Real Estate Advisor</fullName>
                </value>
                <value>
                    <fullName>Commercial Mortgage Broker</fullName>
                </value>
                <value>
                    <fullName>Solar Developer</fullName>
                </value>
                <value>
                    <fullName>Solar EPC</fullName>
                </value>
                <value>
                    <fullName>Solar Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_1_Bill_Savings_pre_solar_bill_po__c</fullName>
        <label>Yr 1 Bill Savings Solar (pre- post)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_Production_kWh__c</fullName>
        <label>Year 1 Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_of_Tenants__c</fullName>
        <label># of Tenants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CleanQuote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CQ_Lead__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CQ-{YYYY}{MM}{0000}</displayFormat>
        <label>CleanQuote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CleanQuotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>